<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/body_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"

        android:padding="5dp"
        android:src="@drawable/ic_no_internet"
        app:tint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/you_are_offline"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minWidth="100dp"
        app:cardBackgroundColor="@drawable/tolbar_gradient"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:contentPadding="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />
    </androidx.cardview.widget.CardView>
</LinearLayout>