<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addlinks_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/addlinks_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tolbar_gradient"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/addlinks_back"
            style="?android:actionButtonStyle"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/addlinks_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_name_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_link_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/url_link_m3u_m3u8_ts_mp4"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_useragent_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_user_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/user_agent"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_ref_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_ref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/referer"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_auth_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/auth"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_cookie_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_cookie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/cookie"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_links_license_par"
                style="@style/TextInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:textColorHint="#CDCDCD"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addlinks_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/license"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/white"
                android:gravity="center"
                android:background="?android:selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginStart="2.0dip"
                app:endIconMode="dropdown_menu"
                app:hintTextColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <AutoCompleteTextView
                    android:textSize="@dimen/text_size_18"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:id="@+id/addlinks_scheme"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scheme"
                    android:paddingStart="8.0dip" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/force_m3u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:checked="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/is_m3u_link"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <CheckBox
                    android:id="@+id/check_web_browser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:checked="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/web_browser"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_exo_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/exoplayer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <CheckBox
                    android:id="@+id/check_web_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:checked="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/web_player"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <Button
                android:id="@+id/addlinks_saver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>