<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_options_par"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_back"
    android:orientation="vertical"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_options_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical|center|center_horizontal"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/dialog_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_edit"
                app:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/edit_dialog"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_options_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical|center|center_horizontal"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/dialog_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_delete"
                app:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/delete_dialog"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_options_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical|center|center_horizontal"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/dialog_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close"
                app:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/close_dialog"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>